file(GLOB_RECURSE shadow_lib_src "shadow/*.cpp")
file(GLOB_RECURSE shadow_cu_src "shadow/*.cu")
file(GLOB_RECURSE shadow_test_src "test/*.cpp" "../external/gtest/gtest-all.cc")

if (CUDA_FOUND)
  cuda_add_library(shadow SHARED ${shadow_lib_src} ${shadow_cu_src})
  target_link_libraries(shadow ${Shadow_LINKER_LIBS})
else ()
  add_library(shadow SHARED ${shadow_lib_src})
  target_link_libraries(shadow ${Shadow_LINKER_LIBS})
endif ()
install(TARGETS shadow DESTINATION lib)
install(DIRECTORY ../inc/shadow DESTINATION include)

if (BUILD_TEST)
  add_executable(test_shadow ${shadow_test_src})
  target_link_libraries(test_shadow shadow pthread)
  install(TARGETS test_shadow DESTINATION bin)
endif ()
