if (Protobuf_FOUND)
  file(GLOB proto_files "shadow.proto")
  GenProtobuf(proto_srcs proto_hdrs ${proto_files})
  add_library(proto STATIC ${proto_srcs} ${proto_hdrs})
  target_include_directories(proto PUBLIC ${Protobuf_INCLUDE_DIRS})
  target_link_libraries(proto PUBLIC ${Protobuf_LIBRARIES})
  if (${USE_Protobuf})
    install(TARGETS proto DESTINATION ${Shadow_INSTALL_LIB_PREFIX})
    install(FILES ${proto_hdrs} DESTINATION ${Shadow_INSTALL_INCLUDE_PREFIX}/proto)
  endif ()
  set(Shadow_PROTO_LIB proto PARENT_SCOPE)
endif ()
