if (${USE_Protobuf})
  file(GLOB proto_files "shadow.proto")
  GenProtobuf(proto_srcs proto_hdrs ${proto_files})
  add_library(proto STATIC ${proto_srcs} ${proto_hdrs})
  target_include_directories(proto PUBLIC ${Protobuf_INCLUDE_DIRS})
  target_link_libraries(proto PUBLIC ${Protobuf_LIBRARIES})
  if (NOT ${BUILD_SHARED_LIBS})
    install(TARGETS proto DESTINATION ${Shadow_INSTALL_LIB_PREFIX})
  endif ()
  install(FILES ${proto_hdrs} DESTINATION ${Shadow_INSTALL_INCLUDE_PREFIX}/proto)
  set(Shadow_PROTO_LIB proto PARENT_SCOPE)
endif ()
