if (${BUILD_SERVICE} AND Protobuf_FOUND AND gRPC_FOUND)
  file(GLOB proto_files tmp *.proto)
  GenGRPC(proto_srcs proto_hdrs ${proto_files})
  add_library(grpc_proto STATIC ${proto_srcs} ${proto_hdrs})
  if (MSVC)
    target_compile_definitions(grpc_proto PRIVATE -D_WIN32_WINNT=0x0600)
    set_target_properties(grpc_proto PROPERTIES DEBUG_POSTFIX "d")
  endif ()
  install(TARGETS grpc_proto DESTINATION lib)
endif ()
